--- a/fly.toml
+++ b/fly.toml
@@ -8,11 +8,10 @@ primary_region = "sjc"
   PHOTOVIEW_DATABASE_DRIVER = "sqlite"
   PHOTOVIEW_DATABASE_PATH = "/data/photoview.db"
   PHOTOVIEW_MEDIA_CACHE = "/data/cache"
+  PHOTOVIEW_MEDIA_PATH = "/data/photos"
   PHOTOVIEW_SERVE_UI = "true"
   PHOTOVIEW_ADMIN_USERNAME = "admin"
   PHOTOVIEW_ADMIN_PASSWORD = "changeme123"
-  PHOTOVIEW_DISABLE_ALBUMS = "false"
-  PHOTOVIEW_DISABLE_SHARING = "false"
   PHOTOVIEW_DISABLE_VIDEOS = "true"
   PHOTOVIEW_DISABLE_RAW = "true"
   PHOTOVIEW_DISABLE_FACES = "true"
@@ -20,42 +19,11 @@ primary_region = "sjc"
   PHOTOVIEW_DISABLE_TIMELINE = "false"
   PHOTOVIEW_DISABLE_ARCHIVE = "true"
   PHOTOVIEW_DISABLE_FAVORITES = "false"
-  PHOTOVIEW_DISABLE_ALBUM_SHARING = "false"
   PHOTOVIEW_DISABLE_PUBLIC_SHARING = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DOWNLOAD = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DELETE = "true"
-  PHOTOVIEW_DISABLE_ALBUM_EDIT = "true"
-  PHOTOVIEW_DISABLE_ALBUM_CREATE = "true"
-  PHOTOVIEW_DISABLE_ALBUM_MOVE = "true"
-  PHOTOVIEW_DISABLE_ALBUM_COPY = "true"
-  PHOTOVIEW_DISABLE_ALBUM_RENAME = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DESCRIPTION = "true"
-  PHOTOVIEW_DISABLE_ALBUM_COVER = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DATE = "true"
-  PHOTOVIEW_DISABLE_ALBUM_LOCATION = "true"
-  PHOTOVIEW_DISABLE_ALBUM_TAGS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_PEOPLE = "true"
-  PHOTOVIEW_DISABLE_ALBUM_FAVORITES = "true"
-  PHOTOVIEW_DISABLE_ALBUM_ARCHIVE = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DELETE_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_EDIT_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_MOVE_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_COPY_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_RENAME_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DESCRIPTION_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_COVER_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_DATE_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_LOCATION_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_TAGS_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_PEOPLE_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_FAVORITES_PHOTOS = "true"
-  PHOTOVIEW_DISABLE_ALBUM_ARCHIVE_PHOTOS = "true"
-  PORT = "8080"
-  PHOTOVIEW_LISTEN_IP = "0.0.0.0"
-  PHOTOVIEW_LISTEN_PORT = "8080"
   PHOTOVIEW_SCAN_INTERVAL = "1h"
   PHOTOVIEW_INITIAL_SCAN = "true"
-  PHOTOVIEW_MEDIA_PATH = "/data/photos"
+  PHOTOVIEW_LISTEN_IP = "0.0.0.0"
+  PHOTOVIEW_LISTEN_PORT = "8080"
 
 [[mounts]]
   source = "photoview_data"
@@ -64,6 +32,9 @@ primary_region = "sjc"
   auto_extend_size_threshold = 80
   auto_extend_size_increment = "1GB"
   auto_extend_size_limit = "5GB"
+
+[processes]
+  app = "photoview"
 
 [[services]]
   protocol = "tcp"
@@ -79,12 +50,11 @@ primary_region = "sjc"
     port = 443
     handlers = ["tls", "http"]
 
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s" 
+  [[services.http_checks]]
+    interval = "30s"
+    timeout = "5s"
+    grace_period = "10s"
+    method = "get"
+    path = "/api/v1/health"
+    protocol = "http"
+    tls_skip_verify = true 
