--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,39 @@ services:
       - MYSQL_RANDOM_ROOT_PASSWORD=1
     volumes:
       - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "photoview", "-pphotoview"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   photoview:
-    build: .
+    image: photoview/photoview:latest
     ports:
       - "8081:8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
-      - ./test_photos:/data/photos:ro
-      - photoview_cache:/data/cache
+      - ./Photos:/photos:ro
+      - photoview_cache:/app/cache
     environment:
-      - PHOTOVIEW_ADMIN_USERNAME=admin
+      - PHOTOVIEW_DATABASE_DRIVER=mysql
+      - PHOTOVIEW_MYSQL_URL=photoview:photoview@tcp(db:3306)/photoview
+      - PHOTOVIEW_LISTEN_IP=photoview
+      - PHOTOVIEW_LISTEN_PORT=8080
+      - PHOTOVIEW_MEDIA_CACHE=/app/cache
+      - PHOTOVIEW_MEDIA_PATH=/photos
       - PHOTOVIEW_ADMIN_PASSWORD=changeme123
-      - PHOTOVIEW_MEDIA_PATH=/data/photos
+      - PHOTOVIEW_ADMIN_USERNAME=admin
       - PHOTOVIEW_INITIAL_SCAN=true
-      - PHOTOVIEW_MYSQL_URL=photoview:photoview@tcp(db)/photoview
+      - PHOTOVIEW_PERIODIC_SCAN_INTERVAL=1h
+    healthcheck:
+      test: ["CMD", "mysql", "-h", "db", "-u", "photoview", "-pphotoview", "photoview", "-e", "SELECT COUNT(*) FROM media;"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 volumes:
   photoview_cache:
